[package]
name = "twitter_image_collector_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-v2 = "0.1.6"
dotenvy = "0.15.1"
tokio = {version = "1.20.1", features = ["full"]}
anyhow = "1.0.59"

